fix: single results not showing up

--- a/frontend/styles/components/profile-root/profile-root.scss
+++ b/frontend/styles/components/profile-root/profile-root.scss
@@ -5,7 +5,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: $z-base;
+    z-index: $z-veil;
     background-color: rgba($light-gray, .7);
   }
 
